updated images for portfolio, completed titles for imgs, added spacing, and corrected alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,6 @@ main {
 .row {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
 }
 
 #name {
@@ -125,16 +124,19 @@ main {
 .card {
     position: relative;
     text-align: center;
-    color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
+    margin: 25px;
+    overflow: hidden;
 }
 
 .card-title {
     position: absolute;
-    top: 50%;
+    top: 80%;
     left: 50%;
     transform: translate(-50%, -50%);
+    color: white;
+    background-color: #4aaaa5;
+    width: 100%;
+    padding: 10px;
 }
 
 .card h2 {
